<!--
  ~ Copyright (c) 2018 ThanksMister LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed
  ~ under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="false">ESP8266 Connect</string>
    <string name="button_connect">Connect</string>
    <string name="button_retry">Retry</string>
    <string name="error_network_disconnected">Network disconnected…</string>
    <string name="title_settings">Settings</string>
    <string name="pref_address">Address</string>
    <string name="pref_ssid">WiFi Name (SSID)</string>
    <string name="pref_address_value" translatable="false">http://192.168.4.1</string>
    <string name="pref_server">Access Point</string>
    <string name="pref_address_description">Enter the name for the access point.</string>
    <string name="pref_password">WiFi Password</string>
    <string name="pref_password_description">Enter the password for the access point.</string>
    <string name="toast_network_connected">Network connected…</string>
    <string name="button_send">Send</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="activity_logs">Logs</string>
    <string name="activity_settings">Settings</string>
    <string name="alert_title_error">Error</string>
    <string name="toast_blak_value">The value not be blank...</string>
    <string name="error_empty_address">The network address is empty, please enter the address in the settings.</string>
</resources>
