<!--
  ~ Copyright (c) 2018 ThanksMister LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed
  ~ under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                style="@style/TextSmall.Green.Bold"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_server" />

            <LinearLayout
                android:id="@+id/api_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SettingsButtonStyle"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    style="@style/TextMedium"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_ssid" />

                <TextView
                    android:id="@+id/api_text"
                    style="@style/TextMedium.SmallAction"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_address_description"/>

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="4dp"/>

            <LinearLayout
                android:id="@+id/password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SettingsButtonStyle"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    style="@style/TextMedium"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_password"/>

                <TextView
                    android:id="@+id/password_text"
                    style="@style/TextMedium.SmallAction"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_password_description"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>